--- a/app/src/main/res/layout/activity_sign_up_tutor_qualifications.xml
+++ b/app/src/main/res/layout/activity_sign_up_tutor_qualifications.xml
@@ -89,45 +89,11 @@
                     android:orientation="horizontal">
 
                     <CheckBox
-                        android:id="@+id/spmcb"
+                        android:id="@+id/diplomacb"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="SPM" />
-
-                    <CheckBox
-                        android:id="@+id/stpmcb"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="STPM"
-                        android:textAlignment="textStart" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <CheckBox
-                        android:id="@+id/foundycb"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Foundation" />
-
-                    <CheckBox
-                        android:id="@+id/matrixcb"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Matriculation" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                        android:text="Diploma" />
 
                     <CheckBox
                         android:id="@+id/degreecb"
@@ -135,13 +101,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Degree" />
-
-                    <CheckBox
-                        android:id="@+id/mastercb"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Master" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -150,11 +109,24 @@
                     android:orientation="horizontal">
 
                     <CheckBox
+                        android:id="@+id/mastercb"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Master" />
+
+                    <CheckBox
                         android:id="@+id/phdcb"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="PHD" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                 </LinearLayout>
 
@@ -174,7 +146,7 @@
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Industry/Working Experiences"
+                    android:text="Teaching Experiences"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
@@ -185,7 +157,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="Enter job title"
+                    android:hint="Location"
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -193,7 +165,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="Enter job description"
+                    android:hint="Describe"
                     android:inputType="textPersonName" />
 
             </LinearLayout>
