--- a/app/src/main/res/layout/activity_job_history_ended.xml
+++ b/app/src/main/res/layout/activity_job_history_ended.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JobHistoryPrimary">
+    tools:context=".JobHistoryEnded">
+
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -39,9 +40,11 @@
 
     <LinearLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,16 +55,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#32CD32"
-            android:text="Ongoing Classes"
-            android:textStyle="bold" />
+            android:text="Ongoing Classes" />
 
         <Button
-            android:id="@+id/endedbtn"
+            android:id="@+id/closedbtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Ended Classes" />
+            android:background="#32CD32"
+            android:text="Ended Classes"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -203,5 +206,4 @@
         </ScrollView>
 
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
