--- a/app/src/main/res/layout/activity_home_page_tutor.xml
+++ b/app/src/main/res/layout/activity_home_page_tutor.xml
@@ -104,6 +104,23 @@
                     android:orientation="vertical">
 
                     <Button
+                        android:id="@+id/jobApp_sidebar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:background="#34495E"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="Job Application"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/background_light" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
                         android:id="@+id/acceptjobs_sidebar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
