--- a/app/src/main/res/layout/activity_home_message.xml
+++ b/app/src/main/res/layout/activity_home_message.xml
@@ -59,8 +59,9 @@
                 android:orientation="vertical">
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/cvmessage"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="wrap_content">
 
                     <LinearLayout
                         android:layout_width="match_parent"
