--- a/app/src/main/res/layout/activity_tutor_job_app_reject.xml
+++ b/app/src/main/res/layout/activity_tutor_job_app_reject.xml
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:fontFamily="sans-serif-black"
-            android:text="Job Applocation"
+            android:text="Job Application"
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             android:textSize="24sp" />
